# steam-mate

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
docs/: DEV.md  dev.html
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  tray.rs
src-tauri/src/games/: mod.rs
src-tauri/src/games/master_duel/: account.rs  commands.rs  csv.rs  link.rs  mod.rs  paths.rs
src-tauri/src/steam/: account.rs  avatar.rs  commands.rs  mod.rs  paths.rs  process.rs  registry.rs  switch.rs  vdf.rs
src-tauri/tests/fixtures/master_duel/: accounts.csv  accounts_2col.csv  accounts_legacy.csv
src-tauri/tests/fixtures/steam/: loginusers.vdf
src/lib/: avatar.ts  clipboard.ts  errors.ts  toast.ts
src/lib/api/: app.ts  steam.ts  types.ts
src/lib/api/games/: master-duel.ts
src/lib/components/: Toast.svelte
src/lib/i18n/: en.json  index.ts  ja.json  zh.json  zht.json
src/lib/stores/: avatars.ts  steam.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/games/master-duel/: +page.svelte
src/routes/steam/: +page.svelte
src/routes/tray/: +page.svelte
