[package]
name = "steam-mate"
version = "0.2.1"
description = "Steam account switcher + Yu-Gi-Oh! Master Duel asset linker"
authors = ["vibe-dog"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "steam_mate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
keyvalues-parser = "0.2"
sysinfo = "0.32"
csv = "1.3"
walkdir = "2"
dirs = "5"
base64 = "0.22"
ureq = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
junction = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

